--- a/composer.json
+++ b/composer.json
@@ -14,40 +14,11 @@
         "bitbag/coding-standard": "^1.0"
     },
     "require-dev": {
-        "behat/behat": "^3.6.1",
-        "behat/mink-selenium2-driver": "^1.4",
-        "dmore/behat-chrome-extension": "^1.3",
-        "dmore/chrome-mink-driver": "^2.7",
-        "friends-of-behat/mink": "^1.8",
-        "friends-of-behat/mink-browserkit-driver": "^1.4",
-        "friends-of-behat/mink-extension": "^2.4",
-        "friends-of-behat/page-object-extension": "^0.3",
-        "friends-of-behat/suite-settings-extension": "^1.0",
-        "friends-of-behat/symfony-extension": "^2.1",
-        "friends-of-behat/variadic-extension": "^1.3",
-        "lakion/mink-debug-extension": "^2.0.0",
-        "phpspec/phpspec": "^7.0",
-        "phpstan/extension-installer": "^1.0",
-        "phpstan/phpstan": "0.12.82",
-        "phpstan/phpstan-doctrine": "0.12.33",
-        "phpstan/phpstan-strict-rules": "^0.12.0",
-        "phpstan/phpstan-webmozart-assert": "0.12.12",
-        "phpunit/phpunit": "^9.5",
-        "sensiolabs/security-checker": "^6.0",
-        "sylius-labs/coding-standard": "^4.0",
-        "symfony/browser-kit": "^4.4 || ^5.2",
-        "symfony/debug-bundle": "^4.4 || ^5.2",
-        "symfony/dotenv": "^4.4 || ^5.2",
-        "symfony/intl": "^4.4 || ^5.2",
-        "symfony/web-profiler-bundle": "^4.4 || ^5.2",
-        "friendsofsymfony/oauth-server-bundle": "2.*@dev",
-        "polishsymfonycommunity/symfony-mocker-container": "^1.0"
     },
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "BitBag\\SyliusMailChimpPlugin\\": "src/",
-            "Tests\\BitBag\\SyliusMailChimpPlugin\\": "tests/"
+            "BitBag\\SyliusMailChimpPlugin\\": "src/"
         }
     },
     "autoload-dev": {
